--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint \"src/**/*.{ts,tsx}\" --quiet",
-    "format": "prettier --write \"src/**/*.{ts,tsx,json,css,md}\"",
+    "lint": "eslint \"src/**/*.{ts,tsx,js,jsx}\" --quiet",
+    "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -41,7 +41,7 @@
     "vite": "^6.3.5"
   },
   "lint-staged": {
-    "src/**/*.{ts,tsx,css,md,json}": [
+    "*.{ts,tsx,js,jsx,json,css,md}": [
       "eslint --fix",
       "prettier --write"
     ]
