--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,4 @@
+# .github/workflows/ci.yml
 name: CI
 
 on:
@@ -7,7 +8,41 @@ on:
     branches: [main]
 
 jobs:
+  autoformat:
+    if: github.event_name == 'pull_request'
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: frontend
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          persist-credentials: true   # allow pushing back
+
+      - name: Use Node.js 18.x
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run Prettier write
+        run: npx prettier --write "src/**/*.{ts,tsx,json,css,md}"
+
+      - name: Commit formatted files
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add .
+          git diff --quiet HEAD || git commit -m "chore: auto‑format code with Prettier"
+      
+      - name: Push formatting changes
+        run: git push
+
   lint_and_build:
+    needs: [autoformat]
     runs-on: ubuntu-latest
     defaults:
       run:
