--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,1 +1,1 @@
-DATABASE_URL="postgresql://your_username:your_password@localhost:5432/survey_db"
+DATABASE_URL='postgresql://your_username:your_password@localhost:5432/survey_db'
