docs: Configure production deployment for Vercel + Render
- Update README.md tagline to 'Production-ready full-stack application'
- Add Vercel environment variables configuration guide
- Add Render backend CORS configuration guide
- Document complete deployment setup with real URLs
- Include troubleshooting steps for CORS and connectivity

--- a/frontend/.env.production.example
+++ b/frontend/.env.production.example
@@ -3,7 +3,7 @@
 
 # Backend API URL (REQUIRED)
 # Replace with your deployed backend URL
-VITE_API_URL=https://your-backend-url.com
+VITE_API_URL=https://survey-app-1ihh.onrender.com
 
 # Application Name
 VITE_APP_NAME=Survey Application
