--- a/backend/package.json
+++ b/backend/package.json
@@ -67,6 +67,7 @@
     "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^8.46.3",
     "@typescript-eslint/parser": "^8.46.3",
+    "@vitest/coverage-v8": "^1.6.1",
     "eslint": "^9.39.1",
     "prisma": "^6.9.0",
     "supertest": "^6.3.3",
