--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,7 +7,9 @@ PORT=4000
 DATABASE_URL="postgresql://username:password@localhost:5432/survey_app?schema=public"
 
 # CORS
-CORS_ORIGINS="http://localhost:3000,http://localhost:5173"
+# For development: local frontend URLs
+# For production: Add your deployed frontend URL (e.g., Vercel URL)
+CORS_ORIGINS="http://localhost:3000,http://localhost:5173,https://survey-app-beta-ivory.vercel.app"
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
