--- a/backend/package.json
+++ b/backend/package.json
@@ -41,6 +41,7 @@
     "hpp": "^0.2.3",
     "ioredis": "^5.8.2",
     "node-cache": "^5.1.2",
+    "openapi-types": "^12.1.3",
     "prom-client": "^15.1.3",
     "redis": "^5.9.0",
     "swagger-jsdoc": "^6.2.8",
