test(postgres): add PostgreSQL integration test setup
- Add docker-compose.test.yml and db-setup utility
- Update tests and npm scripts for Postgres
- Replace SQLite for prod parity (BREAKING)
- See SETUP_POSTGRES_TESTS.md for setup

--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,10 @@
     "test:coverage": "vitest --coverage",
     "test:watch": "vitest --watch",
     "test:ui": "vitest --ui",
+    "test:db:up": "docker-compose -f docker-compose.test.yml up -d",
+    "test:db:down": "docker-compose -f docker-compose.test.yml down",
+    "test:db:setup": "bash scripts/setup-test-db.sh",
+    "test:db:reset": "DATABASE_URL=\"postgresql://test:test@localhost:5432/survey_app_test?schema=public\" npx prisma migrate reset --force",
     "lint": "eslint \"src/**/*.{ts,js}\" --quiet",
     "lint:fix": "eslint \"src/**/*.{ts,js}\" --fix",
     "generate-client": "node scripts/generate-client.js",
