--- a/backend/package.json
+++ b/backend/package.json
@@ -8,10 +8,10 @@
     "build": "tsc",
     "start": "npm run build && node dist/server.js",
     "typecheck": "tsc --noEmit",
-    "test": "vitest",
-    "test:unit": "vitest src/test/unit",
-    "test:coverage": "vitest --coverage",
-    "test:watch": "vitest --watch",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:unit": "vitest run src/test/unit",
+    "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui",
     "lint": "eslint \"src/**/*.{ts,js}\" --quiet",
     "lint:fix": "eslint \"src/**/*.{ts,js}\" --fix",
@@ -51,7 +51,6 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@eslint/js": "^9.39.1",
     "@testcontainers/postgresql": "^11.8.0",
     "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.18",
@@ -66,10 +65,7 @@
     "@types/swagger-ui-express": "^4.1.8",
     "@types/uuid": "^11.0.0",
     "@types/winston": "^2.4.4",
-    "@typescript-eslint/eslint-plugin": "^8.46.3",
-    "@typescript-eslint/parser": "^8.46.3",
     "@vitest/coverage-v8": "^1.6.1",
-    "eslint": "^9.39.1",
     "prisma": "^6.9.0",
     "supertest": "^6.3.3",
     "ts-node-dev": "^2.0.0",
