refactor: standardize import aliases for consistency
- Add @shared path alias to tsconfig.json and vitest.config.ts

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -9,19 +9,20 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "baseUrl": "src",
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"],
-      "@/controllers/*": ["./controllers/*"],
-      "@/services/*": ["./services/*"],
-      "@/repositories/*": ["./repositories/*"],
-      "@/interfaces/*": ["./interfaces/*"],
-      "@/middleware/*": ["./middleware/*"],
-      "@/config/*": ["./config/*"],
-      "@/errors/*": ["./errors/*"],
-      "@/validation/*": ["./validation/*"],
-      "@/types/*": ["./types/*"],
-      "@/routes/*": ["./routes/*"]
+      "@/*": ["src/*"],
+      "@/controllers/*": ["src/controllers/*"],
+      "@/services/*": ["src/services/*"],
+      "@/repositories/*": ["src/repositories/*"],
+      "@/interfaces/*": ["src/interfaces/*"],
+      "@/middleware/*": ["src/middleware/*"],
+      "@/config/*": ["src/config/*"],
+      "@/errors/*": ["src/errors/*"],
+      "@/validation/*": ["src/validation/*"],
+      "@/types/*": ["src/types/*"],
+      "@/routes/*": ["src/routes/*"],
+      "@shared/*": ["../shared/*"]
     }
   },
   "include": ["src/**/*.ts", "src/server.ts", "../shared/**/*.ts"],
