fix: resolve CI/CD pipeline issues for production readiness
All tests passing: Backend (95 tests) ✅ Frontend (9 tests) ✅
Zero ESLint errors remaining ✅

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview",
     "test": "vitest run --config vitest.config.ts",
     "test:watch": "vitest --config vitest.config.ts",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint \"src/**/*.{ts,tsx}\" --quiet"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
