--- a/backend/package.json
+++ b/backend/package.json
@@ -49,6 +49,9 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.1",
+    "@typescript-eslint/eslint-plugin": "^8.46.3",
+    "@typescript-eslint/parser": "^8.46.3",
     "@testcontainers/postgresql": "^11.8.0",
     "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.18",
@@ -64,6 +67,10 @@
     "@types/uuid": "^11.0.0",
     "@types/winston": "^2.4.4",
     "@vitest/coverage-v8": "^1.6.1",
+    "eslint": "^9.39.1",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.4.1",
+    "globals": "^16.5.0",
     "prisma": "^6.9.0",
     "supertest": "^6.3.3",
     "ts-node-dev": "^2.0.0",
