--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,9 @@
     "zustand": "^5.0.5"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.1",
+    "@typescript-eslint/eslint-plugin": "^8.46.3",
+    "@typescript-eslint/parser": "^8.46.3",
     "@testing-library/jest-dom": "^6.0.2",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.6.0",
@@ -31,8 +34,12 @@
     "@types/react": "^18.2.26",
     "@types/react-dom": "^18.2.10",
     "@vitejs/plugin-react": "^4.4.1",
+    "eslint": "^9.39.1",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.4.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.5.0",
     "jsdom": "^22.1.0",
     "typescript": "^5.8.3",
     "vite": "^6.3.5",
