--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,7 +85,7 @@ jobs:
           echo "🔍 Running ESLint..."
           npm run lint
           echo "✅ ESLint passed"
-          
+
           echo "🔍 Running TypeScript type checking..."
           npm run typecheck --if-present
           echo "✅ TypeScript check passed"
@@ -105,7 +105,7 @@ jobs:
           npm test --if-present
           echo "✅ Frontend tests completed"
 
-  # Combined Backend Code Quality and Build  
+  # Combined Backend Code Quality and Build
   backend-quality-build:
     name: Backend — ESLint + TypeScript + Build + Tests
     runs-on: ubuntu-latest
@@ -131,7 +131,7 @@ jobs:
           echo "🔍 Running ESLint..."
           npm run lint --if-present
           echo "✅ ESLint passed"
-          
+
           echo "🔍 Running TypeScript type checking..."
           npm run typecheck --if-present
           echo "✅ TypeScript check passed"
@@ -183,48 +183,48 @@ jobs:
       #     results_format: sarif
       #     repo_token: ${{ secrets.GITHUB_TOKEN }}
 
-  # Docker Build and Test - Temporarily disabled until Dockerfiles are created
-  # docker:
-  #   name: Docker Build & Test
-  #   runs-on: ubuntu-latest
-  #   needs: [frontend-quality-build, backend-quality-build]
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v4
+  # Docker Build and Test
+  docker:
+    name: Docker Build & Test
+    runs-on: ubuntu-latest
+    needs: [frontend-quality-build, backend-quality-build]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-  #     - name: Set up Docker Buildx
-  #       uses: docker/setup-buildx-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-  #     - name: Build backend Docker image
-  #       uses: docker/build-push-action@v5
-  #       with:
-  #         context: ./backend
-  #         file: ./backend/Dockerfile
-  #         push: false
-  #         tags: survey-backend:test
-  #         cache-from: type=gha
-  #         cache-to: type=gha,mode=max
+      - name: Build backend Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: ./backend
+          file: ./backend/Dockerfile
+          push: false
+          tags: survey-backend:test
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
-  #     - name: Build frontend Docker image
-  #       uses: docker/build-push-action@v5
-  #       with:
-  #         context: ./frontend
-  #         file: ./frontend/Dockerfile
-  #         push: false
-  #         tags: survey-frontend:test
-  #         cache-from: type=gha
-  #         cache-to: type=gha,mode=max
+      - name: Build frontend Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: ./frontend
+          file: ./frontend/Dockerfile
+          push: false
+          tags: survey-frontend:test
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
-  #     - name: Test Docker Compose
-  #       run: |
-  #         docker-compose -f docker-compose.yml config
-  #         echo "✅ Docker Compose configuration is valid"
+      - name: Test Docker Compose
+        run: |
+          docker-compose -f docker-compose.yml config
+          echo "✅ Docker Compose configuration is valid"
 
   # Deployment Jobs
   deploy-staging:
     name: Deploy to Staging
     runs-on: ubuntu-latest
-    needs: [frontend-quality-build, backend-quality-build, security]
+    needs: [frontend-quality-build, backend-quality-build, security, docker]
     if: github.ref == 'refs/heads/develop' && github.event_name == 'push'
     # Note: If you use GitHub Environments (with protection rules), uncomment below and
     # ensure an environment named "staging" exists in your repository settings.
