--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@ node_modules/
 .env.*.local
 backend/.env.test
 
+# Docker
+docker-compose.override.yml
+.env.docker.local
+
 # Logs
 logs/
 *.log
@@ -47,9 +51,10 @@ backend/TEST_DATABASE_SETUP.md
 # Git commit messages
 .git-commit-message.txt
 
-# Exclude all .md files outside docs folders (except README.md)
+# Exclude all .md files outside docs folders (except README.md and DOCKER.md)
 /*.md
 !README.md
+!DOCKER.md
 frontend/*.md
 backend/*.md
 scripts/*.md
