--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -7,6 +7,7 @@
     "rootDir": "..",
     "strict": true,
     "moduleResolution": "node",
+    "types": ["vitest/globals"],
     "esModuleInterop": true,
     "skipLibCheck": true,
     "baseUrl": ".",
