--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -39,5 +39,6 @@
     },
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["src/**/*.{test,spec}.{ts,tsx}", "src/test"]
 }
