refactor: Standardize environment config naming (.example convention)

--- a/backend/.env.production.example
+++ b/backend/.env.production.example
@@ -1,4 +1,4 @@
-# Production Environment Variables Template
+# Backend Production Environment Variables
 # Copy this to .env.production and fill in the actual values
 
 # Application Configuration
@@ -54,10 +54,8 @@ CONTAINER_REGISTRY=your-registry.com
 REGISTRY_USERNAME=your-username
 REGISTRY_PASSWORD=your-password
 
-# Deployment Configuration
+# Frontend URL
 FRONTEND_URL=https://yourdomain.com
-BACKEND_URL=https://api.yourdomain.com
-GRAFANA_PASSWORD=CHANGE_THIS_GRAFANA_ADMIN_PASSWORD
 
 # Database Credentials (separate for security)
 POSTGRES_USER=survey_user
