docs: Expand frontend .env.example with all config variables

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,11 @@
-# frontend/.env.local
+# Frontend Environment Variables Template
+# Copy this to .env and update the values for your local environment
+
+# Backend API URL
 VITE_API_URL=http://localhost:5000
+
+# Application Name
+VITE_APP_NAME=Survey Application
+
+# Environment
+VITE_NODE_ENV=development
