docs: Enhance backend .env.example with better documentation

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,15 +1,20 @@
 
-# Backend Environment Variables
+# Backend Environment Variables Template
+# Copy this to .env and update the values for your local environment
+
+# Application Configuration
 NODE_ENV=development
 PORT=4000
 
-# Database
+# Database Configuration
+# For local PostgreSQL: postgresql://username:password@localhost:5432/survey_app?schema=public
+# For Neon (serverless): postgresql://user:password@host.neon.tech/database?sslmode=require
 DATABASE_URL="postgresql://username:password@localhost:5432/survey_app?schema=public"
 
-# CORS
+# CORS Configuration
 # For development: local frontend URLs
 # For production: Add your deployed frontend URL (e.g., Vercel URL)
-CORS_ORIGINS="http://localhost:3000,http://localhost:5173,https://survey-app-beta-ivory.vercel.app"
+CORS_ORIGINS="http://localhost:3000,http://localhost:5173"
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
@@ -19,11 +24,19 @@ RATE_LIMIT_MAX_REQUESTS=100
 LOG_LEVEL=info
 LOG_FILE_PATH=./logs/app.log
 
-# Security (REQUIRED in production - generate secure random strings)
-# Generate JWT_SECRET: openssl rand -base64 32
-# Generate SECURITY_SESSION_SECRET: openssl rand -base64 32
+# Security Configuration
+# IMPORTANT: In production, generate secure random strings using:
+#   JWT_SECRET: openssl rand -base64 32
+#   SECURITY_SESSION_SECRET: openssl rand -base64 32
 JWT_SECRET=your_super_secret_jwt_key_minimum_32_characters_long_change_in_production
 BCRYPT_ROUNDS=12
 SECURITY_SESSION_SECRET=your_super_secure_session_secret_minimum_32_characters_change_in_production
 SECURITY_TRUST_PROXY=false
 SECURITY_HTTPS_REDIRECT=false
+
+# Redis Configuration (Optional - for caching and sessions)
+# REDIS_URL=redis://localhost:6379
+# REDIS_HOST=localhost
+# REDIS_PORT=6379
+# REDIS_PASSWORD=
+# REDIS_ENABLED=false
