refactor: Consolidate path aliases across frontend build systems
- Add @shared-root alias in vite.config.ts pointing to ../shared
- Add @shared-root path mapping in tsconfig.app.json for TypeScript support

--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -35,7 +35,8 @@
       "@/validation/*": ["src/validation/*"],
       "@/shared/*": ["src/shared/*"],
       "@/assets/*": ["src/assets/*"],
-      "@/config/*": ["src/config/*"]
+      "@/config/*": ["src/config/*"],
+      "@shared-root/*": ["../shared/*"]
     },
     "noUncheckedSideEffectImports": true
   },
