--- a/backend/package.json
+++ b/backend/package.json
@@ -50,8 +50,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
-    "@typescript-eslint/eslint-plugin": "^8.46.3",
-    "@typescript-eslint/parser": "^8.46.3",
+    "@faker-js/faker": "^10.1.0",
     "@testcontainers/postgresql": "^11.8.0",
     "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.18",
@@ -66,6 +65,8 @@
     "@types/swagger-ui-express": "^4.1.8",
     "@types/uuid": "^11.0.0",
     "@types/winston": "^2.4.4",
+    "@typescript-eslint/eslint-plugin": "^8.46.3",
+    "@typescript-eslint/parser": "^8.46.3",
     "@vitest/coverage-v8": "^1.6.1",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.5",
