refactor: consolidate frontend imports to use path aliases
- Updated frontend/src/types/store.ts to use @/services/* alias
- Updated frontend/src/store/useSurveyStore.ts to use @/* aliases
- Updated frontend/src/services/api.ts to use @/* and @shared-root/* aliases
- Updated frontend/src/components/ErrorBoundary/useErrorHandler.ts to use @/* alias
- Added path aliases for @/validation and @/test/* in tsconfig.app.json
- All source code now uses path aliases consistently
- Test files retain relative imports as acceptable exception
- Updated copilot-instructions to document test file exception

All 41 frontend + 176 backend tests still passing

--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -32,7 +32,9 @@
       "@/services/*": ["src/services/*"],
       "@/store/*": ["src/store/*"],
       "@/types/*": ["src/types/*"],
+      "@/validation": ["src/validation.ts"],
       "@/validation/*": ["src/validation/*"],
+      "@/test/*": ["src/test/*"],
       "@/shared/*": ["src/shared/*"],
       "@/assets/*": ["src/assets/*"],
       "@/config/*": ["src/config/*"],
