--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -28,16 +28,24 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"],
+      "@/components": ["src/components"],
       "@/components/*": ["src/components/*"],
+      "@/services": ["src/services"],
       "@/services/*": ["src/services/*"],
+      "@/store": ["src/store"],
       "@/store/*": ["src/store/*"],
+      "@/types": ["src/types"],
       "@/types/*": ["src/types/*"],
       "@/validation": ["src/validation.ts"],
       "@/validation/*": ["src/validation/*"],
       "@/test/*": ["src/test/*"],
+      "@/shared": ["src/shared"],
       "@/shared/*": ["src/shared/*"],
+      "@/assets": ["src/assets"],
       "@/assets/*": ["src/assets/*"],
+      "@/config": ["src/config"],
       "@/config/*": ["src/config/*"],
+      "@shared-root": ["../shared"],
       "@shared-root/*": ["../shared/*"]
     },
     "noUncheckedSideEffectImports": true
