chore: update gitignore to protect professional documentation files
- Keep PROFESSIONAL_*.md files local (for internal use only)
- Keep CONTRIBUTING_PROFESSIONAL.md local (for team reference)
- Only README.md, DOCKER.md, CI-CD.md, COMMIT_STANDARDS.md pushed to GitHub

--- a/.gitignore
+++ b/.gitignore
@@ -52,9 +52,12 @@ backend/TEST_DATABASE_SETUP.md
 .git-commit-message.txt
 
 # Exclude all .md files outside docs folders (except README.md and DOCKER.md)
+
 /*.md
 !README.md
 !DOCKER.md
+!CI-CD.md
+!COMMIT_STANDARDS.md
 frontend/*.md
 backend/*.md
 scripts/*.md
