docs: add CONTRIBUTING guide and update gitignore whitelist

--- a/.gitignore
+++ b/.gitignore
@@ -55,7 +55,7 @@ backend/TEST_DATABASE_SETUP.md
 
 /*.md
 !README.md
-!CONTRIBUTING_PROFESSIONAL.md
+!CONTRIBUTING.md
 !DOCKER.md
 !CI-CD.md
 !COMMIT_STANDARDS.md
