docs: remove CI-CD and DOCKER from GitHub, keep COMMIT_STANDARDS
- Keep README, CONTRIBUTING, COMMIT_STANDARDS on GitHub
- Remove CI-CD.md and DOCKER.md from tracking
- Update .gitignore accordingly

--- a/.gitignore
+++ b/.gitignore
@@ -51,13 +51,11 @@ backend/TEST_DATABASE_SETUP.md
 # Git commit messages
 .git-commit-message.txt
 
-# Exclude all .md files outside docs folders (except README.md and DOCKER.md)
+# Exclude all .md files outside docs folders (except README, CONTRIBUTING, COMMIT_STANDARDS)
 
 /*.md
 !README.md
 !CONTRIBUTING.md
-!DOCKER.md
-!CI-CD.md
 !COMMIT_STANDARDS.md
 frontend/*.md
 backend/*.md
