--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,14 +25,15 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
-    "@typescript-eslint/eslint-plugin": "^8.46.3",
-    "@typescript-eslint/parser": "^8.46.3",
+    "@faker-js/faker": "^10.1.0",
     "@testing-library/jest-dom": "^6.0.2",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.6.0",
     "@types/node": "^24.10.0",
     "@types/react": "^18.2.26",
     "@types/react-dom": "^18.2.10",
+    "@typescript-eslint/eslint-plugin": "^8.46.3",
+    "@typescript-eslint/parser": "^8.46.3",
     "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.5",
