--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "@tanstack/react-query": "^5.90.10",
     "axios": "^1.9.0",
     "immer": "^10.2.0",
     "react": "^18.2.0",
