fix(build): resolve tsconfig and dist output configuration

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "dist/server.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/server.ts",
-    "build": "tsc",
+    "build": "tsc && node scripts/postbuild.js",
     "start": "npm run build && node dist/server.js",
     "typecheck": "tsc --noEmit",
     "test": "vitest run",
