--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -7,7 +7,6 @@
     "rootDir": "..",
     "strict": true,
     "moduleResolution": "node",
-    "types": ["vitest/globals"],
     "esModuleInterop": true,
     "skipLibCheck": true,
     "noEmitOnError": false,
@@ -28,5 +27,11 @@
     }
   },
   "include": ["src/**/*.ts", "../shared/**/*.ts"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": [
+    "node_modules",
+    "dist",
+    "**/*.test.ts",
+    "**/*.spec.ts",
+    "src/test/**"
+  ]
 }
