--- a/backend/package.json
+++ b/backend/package.json
@@ -46,12 +46,7 @@
     "uuid": "^13.0.0",
     "winston": "^3.18.3",
     "winston-daily-rotate-file": "^5.0.0",
-    "zod": "^4.1.12"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.39.1",
-    "@faker-js/faker": "^10.1.0",
-    "@testcontainers/postgresql": "^11.8.0",
+    "zod": "^4.1.12",
     "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.18",
     "@types/express": "^4.17.17",
@@ -59,12 +54,19 @@
     "@types/hpp": "^0.2.7",
     "@types/node": "^22.15.29",
     "@types/node-cache": "^4.2.5",
-    "@types/redis": "^4.0.11",
-    "@types/supertest": "^2.0.12",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "@types/uuid": "^11.0.0",
     "@types/winston": "^2.4.4",
+    "typescript": "^5.8.3",
+    "tsc-alias": "^1.8.8"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.39.1",
+    "@faker-js/faker": "^10.1.0",
+    "@testcontainers/postgresql": "^11.8.0",
+    "@types/redis": "^4.0.11",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^8.46.3",
     "@typescript-eslint/parser": "^8.46.3",
     "@vitest/coverage-v8": "^1.6.1",
@@ -76,8 +78,6 @@
     "supertest": "^6.3.3",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
-    "tsc-alias": "^1.8.8",
-    "typescript": "^5.8.3",
     "vitest": "^1.4.7"
   }
 }
