--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/server.ts",
     "build": "tsc && tsc-alias --project tsconfig.json",
-    "start": "npm run build && node dist/backend/src/server.js",
+    "start": "npm run build && npm run migrate:deploy && node dist/backend/src/server.js",
+    "migrate:deploy": "prisma migrate deploy",
     "typecheck": "tsc --noEmit",
     "test": "vitest run",
     "test:watch": "vitest",
@@ -28,6 +29,17 @@
   "dependencies": {
     "@prisma/client": "^6.9.0",
     "@prisma/instrumentation": "^6.19.0",
+    "@types/compression": "^1.8.1",
+    "@types/cors": "^2.8.18",
+    "@types/express": "^4.17.17",
+    "@types/express-status-monitor": "^1.3.3",
+    "@types/hpp": "^0.2.7",
+    "@types/node": "^22.15.29",
+    "@types/node-cache": "^4.2.5",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
+    "@types/uuid": "^11.0.0",
+    "@types/winston": "^2.4.4",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
@@ -40,26 +52,16 @@
     "ioredis": "^5.8.2",
     "node-cache": "^5.1.2",
     "openapi-types": "^12.1.3",
+    "pg": "^8.16.3",
     "prom-client": "^15.1.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
+    "tsc-alias": "^1.8.8",
+    "typescript": "^5.8.3",
     "uuid": "^13.0.0",
     "winston": "^3.18.3",
     "winston-daily-rotate-file": "^5.0.0",
-    "zod": "^4.1.12",
-    "@types/compression": "^1.8.1",
-    "@types/cors": "^2.8.18",
-    "@types/express": "^4.17.17",
-    "@types/express-status-monitor": "^1.3.3",
-    "@types/hpp": "^0.2.7",
-    "@types/node": "^22.15.29",
-    "@types/node-cache": "^4.2.5",
-    "@types/swagger-jsdoc": "^6.0.4",
-    "@types/swagger-ui-express": "^4.1.8",
-    "@types/uuid": "^11.0.0",
-    "@types/winston": "^2.4.4",
-    "typescript": "^5.8.3",
-    "tsc-alias": "^1.8.8"
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
