--- a/backend/package.json
+++ b/backend/package.json
@@ -61,7 +61,8 @@
     "uuid": "^13.0.0",
     "winston": "^3.18.3",
     "winston-daily-rotate-file": "^5.0.0",
-    "zod": "^4.1.12"
+    "zod": "^4.1.12",
+    "prisma": "^6.9.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
@@ -76,7 +77,6 @@
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.4.1",
     "globals": "^16.5.0",
-    "prisma": "^6.9.0",
     "supertest": "^6.3.3",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
