--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@faker-js/faker": "^10.1.0",
+    "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.0.2",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.6.0",
@@ -38,7 +39,10 @@
     "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-prettier": "^5.4.1",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.5.0",
